all_exercises page

--- a/styles/style.css
+++ b/styles/style.css
@@ -346,7 +346,7 @@ margin-left: 18px;
 	padding-top: 12%;
 }
 
-.central__scroll{
+/* .central__scroll{
 	perspective: 1200px;
  	font-size:0;
  	margin-bottom: 3rem;
@@ -403,7 +403,7 @@ margin-left: 18px;
 	transform: translate(-50%, -50%);
 	font-size: 20px;
 	color: white;
-}
+} */
 .central_block_info{
     color: white;
     float: left;
@@ -422,4 +422,101 @@ margin-left: 18px;
 }
 ul {
     list-style-type: circle;
+}
+
+/* Собственно сам слайдер */
+.slider{
+    max-width: 80%;
+    position: relative;
+    margin: auto;
+    height: 300px;
+    margin-bottom: 15px;
+}
+/* Картинка мастабируется по отношению к родительскому элементу */
+.slider .item img {
+    object-fit: cover;
+    width: 80%;
+    height: 300px;
+    border: none ;
+    box-shadow: none;
+    max-width: 425px;
+    position: absolute;
+    left: 30%;
+}
+/* Кнопки вперед и назад */
+.slider .prev_item, .slider .next_item {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    top: 50%;
+    width:auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+.slider .next_item {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+/* При наведении на кнопки добавляем фон кнопок */
+.slider .prev_item:hover,
+.slider .next_item:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+/* Заголовок слайда */
+.slideText {
+    position: absolute;
+    color: #fff;
+    font-size: 35px;
+    /* Выравнивание текста по горизонтали и по вертикали*/
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    /* Тень*/
+    text-shadow: 1px 1px 1px #000, 0 0 1em #000;
+}
+/* Кружочки */
+.slider-dots {
+    text-align: center;
+}
+.slider-dots_item{
+    cursor: pointer;
+    height: 12px;
+    width: 12px;
+    margin: 0 2px;
+    background-color: #ddd;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+.active,
+.slider-dots_item:hover {
+    background-color: #ff9100;
+}
+/* Анимация слайдов */
+.slider .item {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
